tests/NormalTests/paczka1/small_fuzzy/45801909.err
Error in line 8: UySd S706 20,3
Error in line 14: Fd0sTBPEG S578 28,4
